--- a/notebooks/try2.ipynb
+++ b/notebooks/try2.ipynb
@@ -13,17 +13,138 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 1,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
+      "Config file found at: /Users/daved/Dev/pinon/config/master.xlsx\n",
+      "Simfin data directory: /Users/daved/Dev/pinon/simfin_data\n",
+      "Dataset \"us-companies\" on disk (13 days old).\n",
+      "- Downloading ... 100.0%\n",
+      "- Extracting zip-file ... Done!\n",
+      "- Loading from disk ... Done!\n",
+      "Dataset \"us-income-quarterly\" on disk (4 days old).\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/daved/opt/anaconda3/envs/py3_10_8_pinon/lib/python3.10/site-packages/simfin/load.py:144: FutureWarning: The argument 'date_parser' is deprecated and will be removed in a future version. Please use 'date_format' instead, or read your data in as 'object' dtype and then call 'to_datetime'.\n",
+      "  df = pd.read_csv(path, sep=';', header=0,\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "- Downloading ... 100.0%\n",
+      "- Extracting zip-file ... Done!\n",
+      "- Loading from disk ... "
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/daved/opt/anaconda3/envs/py3_10_8_pinon/lib/python3.10/site-packages/simfin/load.py:144: FutureWarning: The argument 'date_parser' is deprecated and will be removed in a future version. Please use 'date_format' instead, or read your data in as 'object' dtype and then call 'to_datetime'.\n",
+      "  df = pd.read_csv(path, sep=';', header=0,\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Done!\n",
+      "Dataset \"us-income-banks-quarterly\" on disk (4 days old).\n",
+      "- Downloading ... 100.0%\n",
+      "- Extracting zip-file ... Done!\n",
+      "- Loading from disk ... Done!\n",
+      "Dataset \"us-income-insurance-quarterly\" on disk (4 days old).\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/daved/opt/anaconda3/envs/py3_10_8_pinon/lib/python3.10/site-packages/simfin/load.py:144: FutureWarning: The argument 'date_parser' is deprecated and will be removed in a future version. Please use 'date_format' instead, or read your data in as 'object' dtype and then call 'to_datetime'.\n",
+      "  df = pd.read_csv(path, sep=';', header=0,\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "- Downloading ... 100.0%\n",
+      "- Extracting zip-file ... Done!\n",
+      "- Loading from disk ... Done!\n",
+      "Dataset \"us-derived-quarterly\" on disk (4 days old).\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/daved/opt/anaconda3/envs/py3_10_8_pinon/lib/python3.10/site-packages/simfin/load.py:144: FutureWarning: The argument 'date_parser' is deprecated and will be removed in a future version. Please use 'date_format' instead, or read your data in as 'object' dtype and then call 'to_datetime'.\n",
+      "  df = pd.read_csv(path, sep=';', header=0,\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "- Downloading ... 100.0%\n",
+      "- Extracting zip-file ... Done!\n",
+      "- Loading from disk ... "
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/daved/opt/anaconda3/envs/py3_10_8_pinon/lib/python3.10/site-packages/simfin/load.py:144: FutureWarning: The argument 'date_parser' is deprecated and will be removed in a future version. Please use 'date_format' instead, or read your data in as 'object' dtype and then call 'to_datetime'.\n",
+      "  df = pd.read_csv(path, sep=';', header=0,\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Done!\n",
+      "Dataset \"us-derived-banks-quarterly\" on disk (4 days old).\n",
+      "- Downloading ... 100.0%\n",
+      "- Extracting zip-file ... Done!\n",
+      "- Loading from disk ... Done!\n",
+      "Dataset \"us-derived-insurance-quarterly\" on disk (4 days old).\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/daved/opt/anaconda3/envs/py3_10_8_pinon/lib/python3.10/site-packages/simfin/load.py:144: FutureWarning: The argument 'date_parser' is deprecated and will be removed in a future version. Please use 'date_format' instead, or read your data in as 'object' dtype and then call 'to_datetime'.\n",
+      "  df = pd.read_csv(path, sep=';', header=0,\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "- Downloading ... 100.0%\n",
+      "- Extracting zip-file ... Done!\n",
+      "- Loading from disk ... Done!\n",
+      "There is an error in the supplied ticker symbol EEFT in Company List of sheet: V of config file: /Users/daved/Dev/pinon/config/master.xlsx. Company uses non stardard quarterly reporting date not currently supported. Company was dropped from the list.\n",
+      "There is an error in the supplied ticker symbol PAGS in Company List of sheet: V of config file: /Users/daved/Dev/pinon/config/master.xlsx. Company was not found and was dropped from the list.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/daved/opt/anaconda3/envs/py3_10_8_pinon/lib/python3.10/site-packages/simfin/load.py:144: FutureWarning: The argument 'date_parser' is deprecated and will be removed in a future version. Please use 'date_format' instead, or read your data in as 'object' dtype and then call 'to_datetime'.\n",
+      "  df = pd.read_csv(path, sep=';', header=0,\n"
      ]
     }
    ],
@@ -42,90 +163,14 @@
     "\n",
     "# imports\n",
     "import pandas as pd\n",
+    "import seaborn as sns\n",
     "import os\n",
     "\n",
     "import pinon as pn\n",
     "import pinon.names as pn_cols\n",
     "import simfin as sf\n",
-    "import simfin.names as sf_cols  # column name shortcuts\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 28,
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Config file found at: /Users/daved/Dev/pinon/config/master.xlsx\n",
-      "Simfin data directory: /Users/daved/Dev/pinon/simfin_data\n",
-      "Dataset \"us-companies\" on disk (7 days old).\n",
-      "- Loading from disk ... Done!\n",
-      "Dataset \"us-income-quarterly\" on disk (0 days old).\n",
-      "- Loading from disk ... "
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/daved/opt/anaconda3/envs/py3_10_8_pinon/lib/python3.10/site-packages/simfin/load.py:144: FutureWarning: The argument 'date_parser' is deprecated and will be removed in a future version. Please use 'date_format' instead, or read your data in as 'object' dtype and then call 'to_datetime'.\n",
-      "  df = pd.read_csv(path, sep=';', header=0,\n",
-      "/Users/daved/opt/anaconda3/envs/py3_10_8_pinon/lib/python3.10/site-packages/simfin/load.py:144: FutureWarning: The argument 'date_parser' is deprecated and will be removed in a future version. Please use 'date_format' instead, or read your data in as 'object' dtype and then call 'to_datetime'.\n",
-      "  df = pd.read_csv(path, sep=';', header=0,\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Done!\n",
-      "Dataset \"us-income-banks-quarterly\" on disk (0 days old).\n",
-      "- Loading from disk ... Done!\n",
-      "Dataset \"us-income-insurance-quarterly\" on disk (0 days old).\n",
-      "- Loading from disk ... Done!\n",
-      "Dataset \"us-derived-quarterly\" on disk (0 days old).\n",
-      "- Loading from disk ... "
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/daved/opt/anaconda3/envs/py3_10_8_pinon/lib/python3.10/site-packages/simfin/load.py:144: FutureWarning: The argument 'date_parser' is deprecated and will be removed in a future version. Please use 'date_format' instead, or read your data in as 'object' dtype and then call 'to_datetime'.\n",
-      "  df = pd.read_csv(path, sep=';', header=0,\n",
-      "/Users/daved/opt/anaconda3/envs/py3_10_8_pinon/lib/python3.10/site-packages/simfin/load.py:144: FutureWarning: The argument 'date_parser' is deprecated and will be removed in a future version. Please use 'date_format' instead, or read your data in as 'object' dtype and then call 'to_datetime'.\n",
-      "  df = pd.read_csv(path, sep=';', header=0,\n",
-      "/Users/daved/opt/anaconda3/envs/py3_10_8_pinon/lib/python3.10/site-packages/simfin/load.py:144: FutureWarning: The argument 'date_parser' is deprecated and will be removed in a future version. Please use 'date_format' instead, or read your data in as 'object' dtype and then call 'to_datetime'.\n",
-      "  df = pd.read_csv(path, sep=';', header=0,\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Done!\n",
-      "Dataset \"us-derived-banks-quarterly\" on disk (0 days old).\n",
-      "- Loading from disk ... Done!\n",
-      "Dataset \"us-derived-insurance-quarterly\" on disk (0 days old).\n",
-      "- Loading from disk ... Done!\n",
-      "There is an error in the supplied ticker symbol EEFT in Company List of sheet: V of config file: /Users/daved/Dev/pinon/config/master.xlsx. Company uses non stardard quarterly reporting date not currently supported. Company was dropped from the list.\n",
-      "There is an error in the supplied ticker symbol PAGS in Company List of sheet: V of config file: /Users/daved/Dev/pinon/config/master.xlsx. Company was not found and was dropped from the list.\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/daved/opt/anaconda3/envs/py3_10_8_pinon/lib/python3.10/site-packages/simfin/load.py:144: FutureWarning: The argument 'date_parser' is deprecated and will be removed in a future version. Please use 'date_format' instead, or read your data in as 'object' dtype and then call 'to_datetime'.\n",
-      "  df = pd.read_csv(path, sep=';', header=0,\n",
-      "/Users/daved/opt/anaconda3/envs/py3_10_8_pinon/lib/python3.10/site-packages/simfin/load.py:144: FutureWarning: The argument 'date_parser' is deprecated and will be removed in a future version. Please use 'date_format' instead, or read your data in as 'object' dtype and then call 'to_datetime'.\n",
-      "  df = pd.read_csv(path, sep=';', header=0,\n"
-     ]
-    }
-   ],
-   "source": [
+    "import simfin.names as sf_cols  # column name shortcuts\n",
+    "\n",
     "config = pn.Config('master', 'V', 10)"
    ],
    "metadata": {
@@ -134,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 19,
    "outputs": [
     {
      "name": "stdout",
@@ -142,70 +187,37 @@
      "text": [
       "Adding breaking report for ticker V for report date 2023-03-31\n",
       "Adding breaking report for ticker DFS for report date 2023-03-31\n",
-      "Unexpected exception formatting exception. Falling back to standard exception\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Traceback (most recent call last):\n",
-      "  File \"/Users/daved/opt/anaconda3/envs/py3_10_8_pinon/lib/python3.10/site-packages/IPython/core/interactiveshell.py\", line 3460, in run_code\n",
-      "    exec(code_obj, self.user_global_ns, self.user_ns)\n",
-      "  File \"/var/folders/9p/f2tvcxd55k125ycs4hyyx6800000gn/T/ipykernel_70938/2166537084.py\", line 3, in <module>\n",
-      "    comps.run_variations()\n",
-      "  File \"/Users/daved/Dev/pinon/pinon/comps.py\", line 45, in run_variations\n",
-      "    print('Here')\n",
-      "  File \"/Users/daved/Dev/pinon/pinon/comps.py\", line 45, in run_variations\n",
-      "    print('Here')\n",
-      "  File \"_pydevd_bundle/pydevd_cython_darwin_310_64.pyx\", line 1179, in _pydevd_bundle.pydevd_cython_darwin_310_64.SafeCallWrapper.__call__\n",
-      "  File \"_pydevd_bundle/pydevd_cython_darwin_310_64.pyx\", line 620, in _pydevd_bundle.pydevd_cython_darwin_310_64.PyDBFrame.trace_dispatch\n",
-      "  File \"_pydevd_bundle/pydevd_cython_darwin_310_64.pyx\", line 929, in _pydevd_bundle.pydevd_cython_darwin_310_64.PyDBFrame.trace_dispatch\n",
-      "  File \"_pydevd_bundle/pydevd_cython_darwin_310_64.pyx\", line 920, in _pydevd_bundle.pydevd_cython_darwin_310_64.PyDBFrame.trace_dispatch\n",
-      "  File \"_pydevd_bundle/pydevd_cython_darwin_310_64.pyx\", line 317, in _pydevd_bundle.pydevd_cython_darwin_310_64.PyDBFrame.do_wait_suspend\n",
-      "  File \"/Applications/DataSpell.app/Contents/plugins/python-ce/helpers/pydev/pydevd.py\", line 1160, in do_wait_suspend\n",
-      "    self._do_wait_suspend(thread, frame, event, arg, suspend_type, from_this_thread)\n",
-      "  File \"/Applications/DataSpell.app/Contents/plugins/python-ce/helpers/pydev/pydevd.py\", line 1175, in _do_wait_suspend\n",
-      "    time.sleep(0.01)\n",
-      "KeyboardInterrupt\n",
-      "\n",
-      "During handling of the above exception, another exception occurred:\n",
-      "\n",
-      "Traceback (most recent call last):\n",
-      "  File \"/Users/daved/opt/anaconda3/envs/py3_10_8_pinon/lib/python3.10/site-packages/IPython/core/interactiveshell.py\", line 2057, in showtraceback\n",
-      "    stb = self.InteractiveTB.structured_traceback(\n",
-      "  File \"/Users/daved/opt/anaconda3/envs/py3_10_8_pinon/lib/python3.10/site-packages/IPython/core/ultratb.py\", line 1118, in structured_traceback\n",
-      "    return FormattedTB.structured_traceback(\n",
-      "  File \"/Users/daved/opt/anaconda3/envs/py3_10_8_pinon/lib/python3.10/site-packages/IPython/core/ultratb.py\", line 1012, in structured_traceback\n",
-      "    return VerboseTB.structured_traceback(\n",
-      "  File \"/Users/daved/opt/anaconda3/envs/py3_10_8_pinon/lib/python3.10/site-packages/IPython/core/ultratb.py\", line 865, in structured_traceback\n",
-      "    formatted_exception = self.format_exception_as_a_whole(etype, evalue, etb, number_of_lines_of_context,\n",
-      "  File \"/Users/daved/opt/anaconda3/envs/py3_10_8_pinon/lib/python3.10/site-packages/IPython/core/ultratb.py\", line 818, in format_exception_as_a_whole\n",
-      "    frames.append(self.format_record(r))\n",
-      "  File \"/Users/daved/opt/anaconda3/envs/py3_10_8_pinon/lib/python3.10/site-packages/IPython/core/ultratb.py\", line 736, in format_record\n",
-      "    result += ''.join(_format_traceback_lines(frame_info.lines, Colors, self.has_colors, lvals))\n",
-      "  File \"/Users/daved/opt/anaconda3/envs/py3_10_8_pinon/lib/python3.10/site-packages/stack_data/utils.py\", line 145, in cached_property_wrapper\n",
-      "    value = obj.__dict__[self.func.__name__] = self.func(obj)\n",
-      "  File \"/Users/daved/opt/anaconda3/envs/py3_10_8_pinon/lib/python3.10/site-packages/stack_data/core.py\", line 698, in lines\n",
-      "    pieces = self.included_pieces\n",
-      "  File \"/Users/daved/opt/anaconda3/envs/py3_10_8_pinon/lib/python3.10/site-packages/stack_data/utils.py\", line 145, in cached_property_wrapper\n",
-      "    value = obj.__dict__[self.func.__name__] = self.func(obj)\n",
-      "  File \"/Users/daved/opt/anaconda3/envs/py3_10_8_pinon/lib/python3.10/site-packages/stack_data/core.py\", line 649, in included_pieces\n",
-      "    pos = scope_pieces.index(self.executing_piece)\n",
-      "  File \"/Users/daved/opt/anaconda3/envs/py3_10_8_pinon/lib/python3.10/site-packages/stack_data/utils.py\", line 145, in cached_property_wrapper\n",
-      "    value = obj.__dict__[self.func.__name__] = self.func(obj)\n",
-      "  File \"/Users/daved/opt/anaconda3/envs/py3_10_8_pinon/lib/python3.10/site-packages/stack_data/core.py\", line 628, in executing_piece\n",
-      "    return only(\n",
-      "  File \"/Users/daved/opt/anaconda3/envs/py3_10_8_pinon/lib/python3.10/site-packages/executing/executing.py\", line 164, in only\n",
-      "    raise NotOneValueFound('Expected one value, found 0')\n",
-      "executing.executing.NotOneValueFound: Expected one value, found 0\n"
+      "Here\n"
      ]
     }
    ],
    "source": [
     "comps = pn.Comps(config)\n",
     "comps.run_ratios()\n",
-    "comps.run_variations()"
+    "comps.run_variations()\n",
+    "comps.run_target_ks()"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "comps.all_ks.loc['V', 'AXP'][pn_cols.K_QTR_PE].plot()"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "comps.all_ks.loc[:, pn_cols.K_QTR_PE].plot()"
    ],
    "metadata": {
     "collapsed": false
